fixed flex heading overflow

--- a/src/App.css
+++ b/src/App.css
@@ -5,34 +5,5 @@ body {
   background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
   box-sizing: border-box;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
 }
 
-#container {
-  height: 500px;
-  width: 55vw;
-  background-color: #0093e9;
-  background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
-  border-radius: 12px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.heading {
-  display: inline-block;
-  color: black;
-  margin: 15px 0;
-}
-
-.listItem {
-  font-family: monospace;
-  font-size: 26px;
-  padding: 20px 15px;
-  width: 50%;
-  background-color: #fbab7e;
-  background-image: linear-gradient(62deg, #fbab7e 0%, #f7ce68 100%);
-  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-}
